Fix password saving + error alignment

--- a/src/assets/less/components/input_area.less
+++ b/src/assets/less/components/input_area.less
@@ -15,6 +15,10 @@
         line-height: 2rem;
         padding: 0 0 1rem 0;
         color:@clr-red;
+        text-align: left;
+        &.center{
+          text-align: center;
+        }
         a{
            text-decoration: underline;
            cursor: pointer;
@@ -44,7 +48,6 @@
 
         .err{
             display: block;
-            text-align: center;
         }
     }
 
